update verduny/potatoes to verduny/potatoes/ and relevant updates to swagger
